--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -8,5 +8,12 @@
 }
 
 .users {
-  margin: 10px 10px 10px 10px;
+  margin: 25px 0px 25px 0px;
+}
+
+.gitimg {
+  width:75px;
+  height:75px;
+  border-radius:50%;
+  overflow:hidden;
 }
