--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,10 +1,11 @@
 .diffs {
-  background-color: #F2DEDE;
+  background-color: #e6e6e6;
   border-style: solid;
   border-width: 2px;
   border-color: #A9A9A9;
   border-radius: 5px;
-  padding: 5px 5px;
+  padding: 2px 0px 2px 0px;
+  margin: 2px 0px 2px 0px;
 }
 
 .users {
@@ -12,8 +13,50 @@
 }
 
 .gitimg {
-  width:75px;
-  height:75px;
+  width:50px;
+  height:50px;
   border-radius:50%;
   overflow:hidden;
+  padding: 2px;
+}
+
+.upToDate {
+  background-color: #c1f0c1;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #A9A9A9;
+  border-radius: 5px;
+  padding: 5px 5px;
+}
+
+.outOfDate {
+  background-color: #ffb3b3;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #A9A9A9;
+  border-radius: 5px;
+  padding: 5px 5px;
+}
+
+.notSetUp {
+  background-color: grey;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #A9A9A9;
+  border-radius: 5px;
+  padding: 5px 5px;
+  opacity: 0.5;
+}
+
+.status {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.alignleft {
+  float: left;
+}
+
+.alignright {
+  float: right;
 }
