--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -101,6 +101,7 @@
     -webkit-box-shadow: 0px 0px 1px 1px #c9cdd1;
     -moz-box-shadow: 0px 0px 1px 1px #c9cdd1;
     box-shadow: 0px 0px 1px 1px #c9cdd1;
+    cursor: pointer;
 }
 .button:active {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e9ea), color-stop(100%,#ffffff));
