Stub a updateLastCommit button for dashboard 	modified:   src/client/app/dashboard/dashboard.html 	modified:   src/client/app/dashboard/dashboard.js 	modified:   src/client/styles/style.css

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -20,6 +20,12 @@
   padding: 2px;
 }
 
+.lastCommit {
+  /*background-color: #a1b8e0;*/
+  background-color: #cad8ed;
+  padding: 5px 5px;
+}
+
 .upToDate {
   background-color: #c1f0c1;
   border-style: solid;
