--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -86,7 +86,13 @@
 .filterTextField {
   width: 70%;
   margin: 0px 0px 10px 0px;
+  /*border: 5px solid black;*/
 }
+
+.filterTextField td {
+  padding: 0px 0px 0px 5px;
+}
+
 
 
 /*Dashboard page styles*/
