--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -38,6 +38,21 @@
   margin:auto;
 }
 
+/*Navbar styles*/
+.navbar img {
+  width: 47%;
+  padding: 5px 5px 5px 5px;
+}
+
+.navbar ul a {
+  color: #404040;
+  font-weight: bold;
+}
+
+.navbar ul a:hover {
+  color: #595959;
+  font-weight: bold;
+}
 
 /*Home page styles*/
 .home {
