--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -153,6 +153,9 @@
   font-weight: bold;
 }
 
+.navbar-light .navbar-toggle .icon-bar {
+  background-color: black;
+}
 
 /* ---- Home Page Styles ---- */
 .home {
@@ -203,7 +206,7 @@
 }
 
 
-/*Table css for tables on home/add page*/
+/* ---- Repo Table Styles ---- */
 .tablecss {
   margin-left: 5px;
   width: 100% !important;
@@ -278,12 +281,42 @@
   margin-right: 10%;
 }
 
+.dashboardTitle {
+  font-size: 52px;
+  padding: 0px;
+  font-weight: bold;
+  line-height: 50px;
+}
+
 .dashboardTitle a {
   color: #ff8533;
 }
 
 .dashboardTitle a:hover {
   color: #a6a6a6;
+}
+
+.dashboardBranch {
+  margin: 5px 0px 0px 0px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.dashboardSetupBtn {
+  margin: 10px 0px 10px 0px;
+}
+
+.lastCommit {
+  background-color: #cad8ed;
+  font-size: 14px;
+  padding: 5px 5px;
+  margin: 10px 0px 10px 0px;
+}
+
+.lastCommit span {
+  /*color: #ff8533;*/
+  font-style: oblique;
+  font-weight: bold;
 }
 
 .users {
@@ -298,29 +331,16 @@
   width:50px;
 }
 
-.lastCommit {
-  background-color: #cad8ed;
-  font-size: 16px;
+.dashboardUser a {
+  text-decoration: none;
+  color: black;
   font-weight: bold;
-  padding: 5px 5px;
 }
 
-.updateBtn {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.updateBtn button {
-  margin: 0px 10px 0px 10px;
-}
-
-.upToDate {
-  background-color: #c1f0c1;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 5px 5px;
+.dashboardUser a:hover {
+  text-decoration: none;
+  color: #ff8533;
+  font-weight: bold;
 }
 
 .outOfDate {
@@ -353,6 +373,7 @@
 
 .alignright {
   float: right;
+  position: relative;
 }
 
 .add-repo {
@@ -451,35 +472,38 @@
     background-color: #404040;
     color: #ff8533;
     display:block;
-    font-size: 42px;
+    font-size: 16px;
     font-weight: bold;
     margin:auto;
-    width: 500px;
-    height: 75px;
+    width: 50%;
+    height: 40px;
+    border-radius: 10px;
   }
 
   .loginBtn a:hover {
     background-color: #595959;
     color: #ff8533;
     display:block;
-    font-size: 42px;
+    font-size: 16px;
     font-weight: bold;
     margin:auto;
-    width: 500px;
-    height: 75px;
+    width: 50%;
+    height: 40px;
+    border-radius: 10px;
   }
 
   .loginImg img{
     display:block;
     margin:auto;
-    padding-top: 40%;
+    padding-top: 30%;
     width: 80%;
   }
 
   /* ---- Home Page Styles ---- */
   .home {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
   }
 
   .home a:hover {
@@ -489,12 +513,12 @@
   }
 
   .homeDesc {
-    font-size:16px;
+    font-size:14px;
     padding: 5px 0px 10px 0px;
   }
 
   .homeRows {
-    font-size: 28px;
+    font-size: 14px;
   }
 
   .homeRows:hover .removeButton{
@@ -502,20 +526,20 @@
   }
 
   .homeTitle {
-    font-size: 72px;
+    font-size: 32px;
     font-weight: bold;
   }
 
   .homeTitle span {
     color: #a6a6a6;
-    font-size: 52px;
-    margin: 10px 0px 10px 45px;
+    font-size: 26px;
+    margin: 10px 0px 10px 30px;
   }
 
   .homeTitle span:hover {
     color: #ff8533;
-    font-size: 52px;
-    margin: 10px 0px 10px 45px;
+    font-size: 26px;
+    margin: 10px 0px 10px 30px;
   }
 
   .removeButton {
@@ -526,12 +550,12 @@
 
   /* ---- Add Page Styles ---- */
   .add {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .addTitle {
-    font-size: 72px;
+    font-size: 32px;
     font-weight: bold;
   }
 
@@ -542,22 +566,21 @@
   }
 
   .addDesc {
-    font-size:16px;
+    font-size:14px;
     padding: 5px 0px 10px 0px;
     width:100%;
   }
 
-
   .addTitle span {
     color: #a6a6a6;
-    font-size: 52px;
-    margin: 10px 0px 10px 35px;
+    font-size: 26px;
+    margin: 10px 0px 10px 20px;
   }
 
   .addTitle span:hover {
     color: #ff8533;
-    font-size: 52px;
-    margin: 10px 0px 10px 35px;
+    font-size: 26px;
+    margin: 10px 0px 10px 20px;
   }
 
   .filterTextField {
@@ -567,56 +590,56 @@
 
   .filterTextField td {
     padding: 0px 0px 0px 5px;
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .filterTextField input[type="text"] {
-    width: 450px;
-    height: 60px;
+    width: 100%;
+    height: 35px;
   }
 
   /* ---- About Page Styles ---- */
   .about {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   .aboutTitle {
-    font-size: 72px;
+    font-size: 32px;
     font-weight: bold;
     margin-bottom: 25px;
 
   }
 
   .aboutTitle span {
-    font-size: 52px;
+    font-size: 26px;
     margin: 10px 0px 10px 15px;
     color: #a6a6a6;
   }
 
   .aboutTitle span:hover {
-    font-size: 52px;
+    font-size: 26px;
     margin: 10px 0px 10px 15px;
     color: #ff8533;
   }
 
   .aboutSubTitles {
-    font-size: 28px;
+    font-size: 20px;
   }
 
   .missionDesc {
     font-size: 14px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     padding: 5px 0px 0px 0px;
   }
 
   .whoAreWeDesc {
     font-size: 14px;
-    padding: 5px 0px 20px 0px;
+    padding: 5px 0px 15px 0px;
   }
 
   .aboutPhotoTable {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   .aboutPhotoTable td {
@@ -628,7 +651,7 @@
     color: black;
     font-weight: bold;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 14px;
   }
 
   .aboutPhotoTable a:hover {
@@ -638,14 +661,14 @@
   }
 
   .aboutPhotoTable img{
-    width: 150px;
-    height: 150px;
+    width: 70px;
+    height: 70px;
     border-radius: 150px;
   }
 
   .aboutPhotoTable img:hover {
-    width: 150px;
-    height: 150px;
+    width: 70px;
+    height: 70px;
     border-radius: 150px;
     -webkit-border-radius: 150px;
     -moz-border-radius: 150px;
@@ -657,22 +680,27 @@
   .contactTable span{
     color: black;
     text-decoration: none;
-    font-size: 38px;
+    font-size: 20px;
+    padding-left: 5px;
   }
 
   .contactTable span:hover{
     color: #ff8533;
-    font-size: 38px;
+    font-size: 20px;
+    padding-left: 5px;
   }
 
   .contactTable td {
-    padding: 10px 25px 10px 5px;
+    padding: 10px 25px 10px 0px;
   }
 
   /* ---- Navigation Bar Styles ---- */
   .navbar {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 1%;
+    padding: 0px 0px 10px 0px;
+    border-bottom: 2px solid gray;
   }
 
   .navbar img {
@@ -683,14 +711,203 @@
   .navbar ul a {
     color: #404040;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 16px;
   }
 
   .navbar ul a:hover {
     color: #ff8533;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 16px;
   }
+
+  .navbar-light .navbar-toggle .icon-bar {
+    background-color: black;
+    width: 25px;
+  }
+
+  /* ---- Repo Table Styles ---- */
+  .tablecss {
+    width: 100% !important;
+  }
+
+  .tablecss span {
+    margin-right: 10px;
+  }
+
+  .tablecss a {
+    color: gray;
+  }
+
+  .tablecss a:hover {
+    color: #ff8533;
+  }
+
+  /* ---- Dashboard Page Styles ---- */
+  .dashboard {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .dashboardTitle {
+    font-size: 32px;
+    padding: 0px;
+    font-weight: bold;
+    line-height: 30px;
+  }
+
+  .dashboardTitle a {
+    color: #ff8533;
+  }
+
+  .dashboardTitle a:hover {
+    color: #a6a6a6;
+  }
+
+  .dashboardBranch {
+    margin: 5px 0px 0px 0px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .dashboardSetupBtn {
+    margin: 10px 0px 10px 0px;
+  }
+
+  .lastCommit {
+    background-color: #cad8ed;
+    font-size: 14px;
+    padding: 5px 5px;
+    margin: 10px 0px 10px 0px;
+  }
+
+  .users {
+    margin: 25px 0px 25px 0px;
+  }
+
+  .gitimg {
+    border-radius:50%;
+    height:50px;
+    overflow:hidden;
+    padding: 2px;
+    width:50px;
+  }
+
+  .dashboardUser a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  .dashboardUser a:hover {
+    text-decoration: none;
+    color: #ff8533;
+    font-weight: bold;
+  }
+
+  .upToDate {
+    background-color: #c1f0c1;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+  }
+
+  .outOfDate {
+    background-color: #ffb3b3;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+  }
+
+  .notSetUp {
+    background-color: grey;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+    opacity: 0.5;
+  }
+
+  .status {
+    font-size: 12px;
+    font-weight: bold;
+  }
+
+  .alignleft {
+    float: left;
+  }
+
+  .alignright {
+    float: right;
+    position: relative;
+    top: -10px;
+  }
+
+  .add-repo {
+    font-size: 15px;
+    color: #0000ff;
+    font-family: Helvetica Neue;
+    padding: 10px 10px;
+    line-height: 10px;
+    float: center;
+  }
+
+  .addedRepo {
+    color: #ff0000;
+  }
+
+  .button {
+      display: inline-block;
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#fbffff));
+      background: -moz-linear-gradient(center top, #ffffff 0%, #eeeeee 100%);
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.2s;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      text-shadow: 0.5px 0.5px 0px #fdffff;
+      padding: 5px 5px;
+      /*display: block;*/
+
+      border-color: #c9cdd1;
+      border-width: 0.5px;
+      border-style: solid;
+      text-align: center;
+      font-family: Helvetica Neue;
+      font-size: 13px;
+      line-height: 12px;
+      color: #455868;
+      /*font-weight: bold;*/
+  }
+
+  .button:hover {
+      -webkit-box-shadow: 0px 0px 1px 1px #c9cdd1;
+      -moz-box-shadow: 0px 0px 1px 1px #c9cdd1;
+      box-shadow: 0px 0px 1px 1px #c9cdd1;
+      cursor: pointer;
+  }
+
+  .button:active {
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e9ea), color-stop(100%,#ffffff));
+      background: -moz-linear-gradient(center top, #e8e9ea 0%, #ffffff 100%);
+      -webkit-box-shadow: 0px 0px 2px 1px #c9cdd1;
+      -moz-box-shadow: 0px 0px 2px 1px #c9cdd1;
+      box-shadow: 0px 0px 2px 1px #c9cdd1;
+  }
+
+  .spinner img {
+    width:60%;
+  }
+
+  .spinner {
+    position: absolute;
+    margin-left: 20%;
+  }
+
 }
 
 /* Portrait */
@@ -719,250 +936,6 @@
   and (max-device-width: 736px)
   and (-webkit-min-device-pixel-ratio: 3) {
 
-  /* -- Login Page Styles -- */
-    .loginBtn a {
-      background-color: #404040;
-      color: #ff8533;
-      display:block;
-      font-size: 42px;
-      font-weight: bold;
-      margin:auto;
-      width: 500px;
-      height: 75px;
-    }
-
-    .loginBtn a:hover {
-      background-color: #595959;
-      color: #ff8533;
-      display:block;
-      font-size: 42px;
-      font-weight: bold;
-      margin:auto;
-      width: 500px;
-      height: 75px;
-    }
-
-    .loginImg img{
-      display:block;
-      margin:auto;
-      padding-top: 40%;
-      width: 80%;
-    }
-
-    /* ---- Home Page Styles ---- */
-    .home {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
-    .home a:hover {
-      cursor: pointer;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .homeDesc {
-      font-size:16px;
-      padding: 5px 0px 10px 0px;
-    }
-
-    .homeRows {
-      font-size: 28px;
-    }
-
-    .homeRows:hover .removeButton{
-      display:inline;
-    }
-
-    .homeTitle {
-      font-size: 72px;
-      font-weight: bold;
-    }
-
-    .homeTitle span {
-      color: #a6a6a6;
-      font-size: 52px;
-      margin: 10px 0px 10px 45px;
-    }
-
-    .homeTitle span:hover {
-      color: #ff8533;
-      font-size: 52px;
-      margin: 10px 0px 10px 45px;
-    }
-
-    .removeButton {
-      color: #808080;
-      display: none;
-      float: right;
-    }
-
-    /* ---- Add Page Styles ---- */
-    .add {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
-    .addTitle {
-      font-size: 72px;
-      font-weight: bold;
-    }
-
-    .add a:hover {
-      cursor: pointer;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .addDesc {
-      font-size:16px;
-      padding: 5px 0px 10px 0px;
-      width:100%;
-    }
-
-
-    .addTitle span {
-      color: #a6a6a6;
-      font-size: 52px;
-      margin: 10px 0px 10px 35px;
-    }
-
-    .addTitle span:hover {
-      color: #ff8533;
-      font-size: 52px;
-      margin: 10px 0px 10px 35px;
-    }
-
-    .filterTextField {
-      margin: 0px 0px 10px 0px;
-      width: 100%;
-    }
-
-    .filterTextField td {
-      padding: 15px 0px 15px 5px;
-    }
-
-    .filterTextField input[type="text"] {
-      width: 450px;
-      height: 60px;
-    }
-
-    /* ---- About Page Styles ---- */
-    .about {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
-    .aboutTitle {
-      font-size: 72px;
-      font-weight: bold;
-      margin-bottom: 25px;
-
-    }
-
-    .aboutTitle span {
-      font-size: 52px;
-      margin: 10px 0px 10px 15px;
-      color: #a6a6a6;
-    }
-
-    .aboutTitle span:hover {
-      font-size: 52px;
-      margin: 10px 0px 10px 15px;
-      color: #ff8533;
-    }
-
-    .aboutSubTitles {
-      font-size: 28px;
-    }
-
-    .missionDesc {
-      font-size: 14px;
-      margin-bottom: 50px;
-      padding: 5px 0px 0px 0px;
-    }
-
-    .whoAreWeDesc {
-      font-size: 14px;
-      padding: 5px 0px 20px 0px;
-    }
-
-    .aboutPhotoTable {
-      margin-bottom: 50px;
-    }
-
-    .aboutPhotoTable td {
-      border: none;
-      text-align: center;
-    }
-
-    .aboutPhotoTable a {
-      color: black;
-      font-weight: bold;
-      text-decoration: none;
-      font-size: 24px;
-    }
-
-    .aboutPhotoTable a:hover {
-      color: #ff8533;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .aboutPhotoTable img{
-      width: 150px;
-      height: 150px;
-      border-radius: 150px;
-    }
-
-    .aboutPhotoTable img:hover {
-      width: 150px;
-      height: 150px;
-      border-radius: 150px;
-      -webkit-border-radius: 150px;
-      -moz-border-radius: 150px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-      -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-      -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-    }
-
-    .contactTable span{
-      color: black;
-      text-decoration: none;
-      font-size: 38px;
-    }
-
-    .contactTable span:hover{
-      color: #ff8533;
-      font-size: 38px;
-    }
-
-    .contactTable td {
-      padding: 10px 25px 10px 5px;
-    }
-
-    /* ---- Navigation Bar Styles ---- */
-    .navbar {
-      margin-left: 10%;
-      margin-right: 10%;
-    }
-
-    .navbar img {
-      width: 60%;
-      margin-top: -10px;
-    }
-
-    .navbar ul a {
-      color: #404040;
-      font-weight: bold;
-      font-size: 22px;
-    }
-
-    .navbar ul a:hover {
-      color: #ff8533;
-      font-weight: bold;
-      font-size: 22px;
-    }
 }
 
 /* Portrait */
