--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -35,7 +35,7 @@
   border-width: 2px;
   border-color: #A9A9A9;
   border-radius: 5px;
-  padding: 2px 0px 2px 0px;
+  padding: 2px 5px 2px 5px;
   margin: 2px 0px 2px 0px;
 }
 
@@ -336,6 +336,18 @@
   line-height: 50px;
 }
 
+.dashboardTitle span {
+  color: #a6a6a6;
+  font-size: 30px;
+  margin: 10px 0px 10px 20px;
+}
+
+.dashboardTitle span:hover {
+  color: #ff8533;
+  font-size: 30px;
+  margin: 1px 0px 10px 20px;
+}
+
 .dashboardTitle a {
   color: #ff8533;
 }
@@ -385,6 +397,7 @@
 
 .dashboardUser {
   font-family: 'Montserrat', serif;
+  position: relative;
 }
 
 .dashboardUser a {
@@ -397,6 +410,23 @@
   text-decoration: none;
   color: #ff8533;
   font-weight: bold;
+}
+
+.dashboardUserCommit {
+  padding: 0px 0px 5px 0px;
+}
+
+.dashboardUserInfo {
+  padding: 5px 0px 5px 0px;
+}
+
+.upToDate {
+  background-color: #c1f0c1;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #A9A9A9;
+  border-radius: 5px;
+  padding: 5px 5px;
 }
 
 .outOfDate {
@@ -923,6 +953,15 @@
     text-decoration: none;
     color: #ff8533;
     font-weight: bold;
+  }
+
+  .dashboardUserCommit {
+    padding: 0px 0px 5px 0px;
+    border-bottom: solid 1px gray;
+  }
+
+  .dashboardUserInfo {
+    padding: 5px 0px 5px 0px;
   }
 
   .upToDate {
