--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,3 +1,5 @@
+/* ===== == = === Base Styles === = == ===== */
+
 /* ---- Login Page Styles ---- */
 .loginBtn a {
   background-color: #404040;
@@ -1113,4 +1115,555 @@
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: landscape) {
 
+}
+
+
+
+
+/* ===== == = === 20em (320px) === = == ===== */
+
+@media only screen and (min-width : 20em) {
+  /* -- Login Page Styles -- */
+  .loginBtn a {
+    background-color: #404040;
+    color: #ff8533;
+    display:block;
+    font-size: 16px;
+    font-weight: bold;
+    margin:auto;
+    width: 50%;
+    height: 40px;
+    border-radius: 10px;
+  }
+
+  .loginBtn a:hover {
+    background-color: #595959;
+    color: #ff8533;
+    display:block;
+    font-size: 16px;
+    font-weight: bold;
+    margin:auto;
+    width: 50%;
+    height: 40px;
+    border-radius: 10px;
+  }
+
+  .loginImg img{
+    display:block;
+    margin:auto;
+    padding-top: 30%;
+    width: 80%;
+  }
+
+  /* ---- Home Page Styles ---- */
+  .home {
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 5%;
+  }
+
+  .home a:hover {
+    cursor: pointer;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  .homeTitle {
+    font-size: 32px;
+    font-weight: bold;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .homeDesc {
+    font-size:14px;
+    padding: 5px 0px 10px 0px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .homeRows {
+    font-size: 14px;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+
+  .homeRows:hover .removeButton{
+    display:inline;
+  }
+
+  .homeTitle span {
+    color: #a6a6a6;
+    font-size: 26px;
+    margin: 10px 0px 10px 25px;
+  }
+
+  .homeTitle span:hover {
+    color: #ff8533;
+    font-size: 26px;
+    margin: 10px 0px 10px 25px;
+  }
+
+  .removeButton {
+    color: #808080;
+    display: none;
+    float: right;
+  }
+
+  /* ---- Add Page Styles ---- */
+  .add {
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+
+  .addTitle {
+    font-size: 32px;
+    font-weight: bold;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .add a:hover {
+    cursor: pointer;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  .addDesc {
+    font-size:14px;
+    padding: 5px 0px 10px 0px;
+    width: 95%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .addTitle span {
+    color: #a6a6a6;
+    font-size: 26px;
+    margin: 10px 0px 10px 15px;
+  }
+
+  .addTitle span:hover {
+    color: #ff8533;
+    font-size: 26px;
+    margin: 10px 0px 10px 15px;
+  }
+
+  .filterTextField {
+    margin: 10px 10px 15px 10px;
+    width: 100%;
+  }
+
+  .filterTextField td {
+    padding: 0px 0px 0px 5px;
+    font-size: 18px;
+  }
+
+  .filterTextField input[type="text"] {
+    width: 100%;
+    height: 35px;
+  }
+
+  /* ---- About Page Styles ---- */
+  .about {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .aboutTitle {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 25px;
+
+  }
+
+  .aboutTitle span {
+    font-size: 26px;
+    margin: 10px 0px 10px 15px;
+    color: #a6a6a6;
+  }
+
+  .aboutTitle span:hover {
+    font-size: 26px;
+    margin: 10px 0px 10px 15px;
+    color: #ff8533;
+  }
+
+  .aboutSubTitles {
+    font-size: 20px;
+  }
+
+  .missionDesc {
+    font-size: 14px;
+    margin-bottom: 30px;
+    padding: 5px 0px 0px 0px;
+  }
+
+  .whoAreWeDesc {
+    font-size: 14px;
+    padding: 5px 0px 15px 0px;
+  }
+
+  .aboutPhotoTable {
+    margin-bottom: 30px;
+  }
+
+  .aboutPhotoTable td {
+    border: none;
+    text-align: center;
+  }
+
+  .aboutPhotoTable a {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 14px;
+  }
+
+  .aboutPhotoTable a:hover {
+    color: #ff8533;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  .aboutPhotoTable img{
+    width: 70px;
+    height: 70px;
+    border-radius: 150px;
+  }
+
+  .aboutPhotoTable img:hover {
+    width: 70px;
+    height: 70px;
+    border-radius: 150px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  }
+
+  .contactTable span{
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    padding-left: 5px;
+  }
+
+  .contactTable span:hover{
+    color: #ff8533;
+    font-size: 20px;
+    padding-left: 5px;
+  }
+
+  .contactTable td {
+    padding: 10px 25px 10px 0px;
+  }
+
+  /* ---- Navigation Bar Styles ---- */
+  .navbar {
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 1%;
+    padding: 0px 0px 10px 0px;
+    border-bottom: 2px solid gray;
+  }
+
+  .navbar img {
+    width: 60%;
+    margin-top: -10px;
+  }
+
+  .navbar ul a {
+    color: #404040;
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+  .navbar ul a:hover {
+    color: #ff8533;
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+  .navbar-light .navbar-toggle .icon-bar {
+    background-color: black;
+    width: 25px;
+  }
+
+  /* ---- Repo Table Styles ---- */
+  .tablecss {
+    width: 100% !important;
+  }
+
+  .tablecss span {
+    margin-right: 10px;
+  }
+
+  .tablecss a {
+    color: gray;
+  }
+
+  .tablecss a:hover {
+    color: #ff8533;
+  }
+
+  /* ---- Setup Page Styles ---- */
+  .setup {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .setupTitle {
+    font-size: 32px;
+    font-weight: bold;
+    padding: 10px 0px 10px 0px;
+  }
+
+  .setupTitle span {
+    color: #a6a6a6;
+    font-size: 26px;
+    margin: 10px 0px 10px 20px;
+  }
+
+  .setupTitle span:hover {
+    color: #ff8533;
+    font-size: 26px;
+    margin: 1px 0px 10px 20px;
+  }
+
+  .setupBody {
+    font-size: 14px;
+    padding: 0px 0px 15px 0px;
+    border-radius: 10px
+  }
+
+  .setupBody a {
+    color: #ff8533;
+  }
+
+  .setupBody li {
+    padding: 5px 0px 5px 0px;
+  }
+
+  /* ---- Dashboard Page Styles ---- */
+  .dashboard {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .dashboardTitle {
+    font-size: 32px;
+    padding: 0px;
+    font-weight: bold;
+    line-height: 30px;
+  }
+
+  .dashboardTitle span {
+    color: #a6a6a6;
+    font-size: 26px;
+    margin: 10px 0px 10px 20px;
+  }
+
+  .dashboardTitle span:hover {
+    color: #ff8533;
+    font-size: 26px;
+    margin: 1px 0px 10px 20px;
+  }
+
+  .dashboardTitle a {
+    color: #ff8533;
+  }
+
+  .dashboardTitle a:hover {
+    color: #a6a6a6;
+  }
+
+  .dashboardBranch {
+    margin: 5px 0px 0px 0px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .dashboardSetupBtn {
+    margin: 10px 0px 10px 0px;
+  }
+
+  .lastCommit {
+    background-color: #cad8ed;
+    font-size: 12px;
+    padding: 5px 5px 5px 5px;
+    margin: 10px 0px 10px 0px;
+  }
+
+  .users {
+    margin: 25px 0px 25px 0px;
+  }
+
+  .gitimg {
+    border-radius:50%;
+    height:50px;
+    overflow:hidden;
+    padding: 2px;
+    width:50px;
+  }
+
+  .dashboardUser {
+    position: relative;
+  }
+
+  .dashboardUser a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
+  .dashboardUser a:hover {
+    text-decoration: none;
+    color: #ff8533;
+    font-weight: bold;
+  }
+
+  .dashboardUserCommit {
+    padding: 0px 0px 5px 0px;
+    border-bottom: solid 1px gray;
+  }
+
+  .dashboardUserInfo {
+    padding: 5px 0px 5px 0px;
+  }
+
+  .upToDate {
+    background-color: #c1f0c1;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+  }
+
+  .outOfDate {
+    background-color: #ffb3b3;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+  }
+
+  .notSetUp {
+    background-color: grey;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #A9A9A9;
+    border-radius: 5px;
+    padding: 5px 5px;
+    opacity: 0.5;
+  }
+
+  .status {
+    font-size: 12px;
+    font-weight: bold;
+  }
+
+  .alignleft {
+    float: left;
+  }
+
+  .alignright {
+    position: absolute;
+    top: 2px;
+    right: 4px;
+  }
+
+  .add-repo {
+    font-size: 15px;
+    color: #0000ff;
+    font-family: Helvetica Neue;
+    padding: 10px 10px;
+    line-height: 10px;
+    float: center;
+  }
+
+  .addedRepo {
+    color: #ff0000;
+  }
+
+  .button {
+      display: inline-block;
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#fbffff));
+      background: -moz-linear-gradient(center top, #ffffff 0%, #eeeeee 100%);
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.2s;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      text-shadow: 0.5px 0.5px 0px #fdffff;
+      padding: 5px 5px;
+      /*display: block;*/
+
+      border-color: #c9cdd1;
+      border-width: 0.5px;
+      border-style: solid;
+      text-align: center;
+      font-family: Helvetica Neue;
+      font-size: 13px;
+      line-height: 12px;
+      color: #455868;
+      /*font-weight: bold;*/
+  }
+
+  .button:hover {
+      -webkit-box-shadow: 0px 0px 1px 1px #c9cdd1;
+      -moz-box-shadow: 0px 0px 1px 1px #c9cdd1;
+      box-shadow: 0px 0px 1px 1px #c9cdd1;
+      cursor: pointer;
+  }
+
+  .button:active {
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e9ea), color-stop(100%,#ffffff));
+      background: -moz-linear-gradient(center top, #e8e9ea 0%, #ffffff 100%);
+      -webkit-box-shadow: 0px 0px 2px 1px #c9cdd1;
+      -moz-box-shadow: 0px 0px 2px 1px #c9cdd1;
+      box-shadow: 0px 0px 2px 1px #c9cdd1;
+  }
+
+  .spinner img {
+    width:60%;
+  }
+
+  .spinner {
+    position: absolute;
+    margin-left: 20%;
+  }
+}
+
+/* ===== == = === 30em (480px) === = == ===== */
+
+@media only screen and (min-width : 30em) {
+}
+
+/* ===== == = === 37.5em (600px) === = == ===== */
+
+@media only screen and (min-width: 37.5em) {
+}
+
+/* ===== == = === 48em (768px) === = == ===== */
+
+@media only screen and (min-width : 48em) {
+}
+
+/* ===== == = === 56.25em (900px) === = == ===== */
+
+@media only screen and (min-width : 56.25em) {
+}
+
+/* ===== == = === 68.75em (1100px) === = == ===== */
+
+@media only screen and (min-width : 68.75em) {
+}
+
+/* ===== == = === 81.25em (1300px) === = == ===== */
+
+@media only screen and (min-width : 81.25em) {
 }
