--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -30,17 +30,6 @@
   margin:auto;
 }
 
-/* ---- Dashboard Page Styles ---- */
-.diffs {
-  background-color: #e6e6e6;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #A9A9A9;
-  border-radius: 5px;
-  padding: 2px 5px 2px 5px;
-  margin: 2px 0px 2px 0px;
-}
-
 /* ---- About Page Styles ---- */
 .about {
   margin-left: 10%;
@@ -421,6 +410,16 @@
 
 .dashboardUserInfo {
   padding: 5px 0px 5px 0px;
+}
+
+.diffs {
+  background-color: #e6e6e6;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #A9A9A9;
+  border-radius: 5px;
+  padding: 2px 5px 2px 5px;
+  margin: 2px 0px 2px 0px;
 }
 
 .upToDate {
@@ -1128,11 +1127,11 @@
     background-color: #404040;
     color: #ff8533;
     display:block;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     margin:auto;
     width: 50%;
-    height: 40px;
+    height: 35px;
     border-radius: 10px;
   }
 
@@ -1140,11 +1139,11 @@
     background-color: #595959;
     color: #ff8533;
     display:block;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     margin:auto;
     width: 50%;
-    height: 40px;
+    height: 35px;
     border-radius: 10px;
   }
 
@@ -1169,7 +1168,7 @@
   }
 
   .homeTitle {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: bold;
     margin-left: 5%;
     margin-right: 5%;
@@ -1217,7 +1216,7 @@
   }
 
   .addTitle {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: bold;
     margin-left: 5%;
     margin-right: 5%;
@@ -1251,7 +1250,7 @@
 
   .filterTextField {
     margin: 10px 10px 15px 10px;
-    width: 100%;
+    width: 90%;
   }
 
   .filterTextField td {
@@ -1271,10 +1270,9 @@
   }
 
   .aboutTitle {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: bold;
     margin-bottom: 25px;
-
   }
 
   .aboutTitle span {
@@ -1327,14 +1325,14 @@
   }
 
   .aboutPhotoTable img{
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border-radius: 150px;
   }
 
   .aboutPhotoTable img:hover {
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border-radius: 150px;
     -webkit-border-radius: 150px;
     -moz-border-radius: 150px;
@@ -1415,7 +1413,7 @@
   }
 
   .setupTitle {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: bold;
     padding: 10px 0px 10px 0px;
   }
@@ -1453,7 +1451,7 @@
   }
 
   .dashboardTitle {
-    font-size: 32px;
+    font-size: 26px;
     padding: 0px;
     font-weight: bold;
     line-height: 30px;
@@ -1481,7 +1479,7 @@
 
   .dashboardBranch {
     margin: 5px 0px 0px 0px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
   }
 
@@ -1491,9 +1489,10 @@
 
   .lastCommit {
     background-color: #cad8ed;
-    font-size: 12px;
+    font-size: 11px;
     padding: 5px 5px 5px 5px;
     margin: 10px 0px 10px 0px;
+    word-wrap: break-word;
   }
 
   .users {
@@ -1548,7 +1547,8 @@
     border-width: 2px;
     border-color: #A9A9A9;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 2px 2px 2px 2px;
+    word-wrap: break-word;
   }
 
   .notSetUp {
