--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,5 +1,33 @@
 /* ===== == = === Base Styles === = == ===== */
+.fade {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    opacity: 1;
+}
+.fade.ng-enter,
+.fade.ng-leave {
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.fade.ng-enter {
+    opacity: 0;
+}
+.fade.ng-enter-active {
+    opacity: 1;
+}
+.fade.ng-leave {
+    opacity: 1;
+}
+.fade.ng-leave-active {
+    opacity: 0;
+}
 
+.vis-hidden {
+  visibility:hidden;
+}
 /* ---- Login Page Styles ---- */
 .loginBtn a {
   background-color: #404040;
@@ -256,31 +284,64 @@
   margin: 10px 0px 10px 5px;
 }
 
-.filterTextField {
+.filtertextfield {
   margin: 10px 0px 15px 0px;
   width: 100%;
-  font-family: 'Montserrat', serif;
+  font-family: 'montserrat', serif;
 }
 
-.filterTextField td {
+.filtertextfield td {
   padding: 0px 0px 0px 5px;
   font-size: 24px;
 }
 
-.filterTextField input[type="text"] {
+.filtertextfield input[type="text"] {
   width: 450px;
   height: 50px;
 }
 
 .pages ul li{
-  display: inline-block;
+  display: table-cell;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   float: center;
-  height: 2ex;
-  width: 4ex;
+  text-align: center;
+  vertical-align: middle;
+  height: 1em;
+  width: 1em;
+  border-radius: 5px;
+}
+
+.pages ul .end{
+    float: center;
+    font-family: 'montserrat', serif;
+      font-size: 2em;
+    text-align: center;
+    vertical-align: middle;
+    height: 1em;
+    width: 1em;
 }
 
 .pages ul li:hover{
-  color: #ff8533;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+  width: 1em;
+  height: 1em;
+  color: black;
+  font-weight: bold;
+  z-index: 1;
+  background-color: #fbfbfb;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, .8);
+  cursor: pointer;
+}
+
+.pages ul li:active{
+    box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
+    -webkit-box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
+    -moz-box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
 }
 
 /* ---- Setup Page Styles ---- */
