--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -9,8 +9,8 @@
 }
 .fade.ng-enter,
 .fade.ng-leave {
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
+    -webkit-transition: all 0.2s ease;
+    transition: all 0.2s ease;
 }
 .fade.ng-enter {
     opacity: 0;
@@ -302,8 +302,8 @@
 
 .pages ul li{
   display: table-cell;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
   float: center;
   text-align: center;
   vertical-align: middle;
@@ -314,7 +314,7 @@
 
 .pages ul .end{
     float: center;
-    font-family: 'montserrat', serif;
+    font-family: 'Montserrat', serif;
       font-size: 2em;
     text-align: center;
     vertical-align: middle;
@@ -339,6 +339,7 @@
 }
 
 .pages ul li:active{
+    transition: all .2s ease;
     box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
     -webkit-box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
     -moz-box-shadow: 0 0 0.5px rgba(0, 0, 0, 0);
