--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,10 +1,10 @@
 /* ===== == = === Base Styles === = == ===== */
 .fade {
     position: relative;
-    top: 0;
+    /*top: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 100%;*/
     opacity: 1;
 }
 .fade.ng-enter,
