--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -324,8 +324,8 @@
 
 .pages ul li:hover{
   box-sizing: border-box;
-  -moz-box-sizing: border-box; 
-  -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   width: 1em;
   height: 1em;
   color: #ff8533;
@@ -492,16 +492,16 @@
 .upToDate {
   background-color: #c1f0c1;
   border-style: solid;
-  border-width: 2px;
+  border-width: 1px;
   border-color: #A9A9A9;
   border-radius: 5px;
   padding: 5px 5px;
 }
 
 .outOfDate {
-  background-color: #ffb3b3;
+  /*background-color: #ffb3b3;*/
   border-style: solid;
-  border-width: 2px;
+  border-width: 1px;
   border-color: #A9A9A9;
   border-radius: 5px;
   padding: 5px 5px;
@@ -510,7 +510,7 @@
 .notSetUp {
   background-color: grey;
   border-style: solid;
-  border-width: 2px;
+  border-width: 1px;
   border-color: #A9A9A9;
   border-radius: 5px;
   padding: 5px 5px;
@@ -2128,7 +2128,7 @@
   }
 
   .outOfDate {
-    background-color: #ffb3b3;
+    /*background-color: #ffb3b3;*/
     border-style: solid;
     border-width: 2px;
     border-color: #A9A9A9;
@@ -2649,27 +2649,39 @@
   }
 
   .upToDate {
-    background-color: #c1f0c1;
+    /*background-color: #c1f0c1;*/
+    background-color: #e6e6e6;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: #A9A9A9;
     border-radius: 5px;
     padding: 5px 5px;
+    box-shadow: 2px 2px 2px #888888;
+  }
+
+  .upToDate > div span{
+    color: green;
   }
 
   .outOfDate {
-    background-color: #ffb3b3;
+    /*background-color: #ffb3b3;*/
+    background-color: #e6e6e6;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: #A9A9A9;
     border-radius: 5px;
     padding: 5px 5px;
+    box-shadow: 2px 2px 2px #888888;
+  }
+
+  .outOfDate > div span{
+    color: red;
   }
 
   .notSetUp {
     background-color: grey;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: #A9A9A9;
     border-radius: 5px;
     padding: 5px 5px;
